--- a/WenElevating.Resources/ControlStyles.xaml
+++ b/WenElevating.Resources/ControlStyles.xaml
@@ -14,6 +14,7 @@
         </Setter>
         <Setter Property="MaxWidth" Value="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}" />
         <Setter Property="MaxHeight" Value="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}" />
+        <Setter Property="Focusable" Value="True" />
     </Style>
 
     <!--  IconButton  -->
@@ -21,7 +22,7 @@
         <Setter Property="Opacity" Value="0.8" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconButton}">
@@ -82,7 +83,7 @@
         <Setter Property="Opacity" Value="0.9" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconButton}">
@@ -108,7 +109,7 @@
         <Setter Property="Opacity" Value="1" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconButton}">
@@ -143,7 +144,7 @@
         <Setter Property="Opacity" Value="1" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconButton}">
@@ -183,7 +184,7 @@
         <Setter Property="Opacity" Value="0.8" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconRadioButton}">
@@ -238,7 +239,7 @@
         <Setter Property="Opacity" Value="1" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:IconRadioButton}">
@@ -263,7 +264,7 @@
     <!--  弹窗样式  -->
     <Style x:Key="Todo_PopupStyle" TargetType="{x:Type Popup}">
         <Setter Property="AllowsTransparency" Value="True" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="HorizontalOffset" Value="4" />
         <Setter Property="Placement" Value="Right" />
         <Setter Property="PopupAnimation" Value="Fade" />
