--- a/WenElevating.Resources/ThemeColors/LightColors.xaml
+++ b/WenElevating.Resources/ThemeColors/LightColors.xaml
@@ -7,4 +7,6 @@
     <SolidColorBrush x:Key="PopupContentBackground" Color="#FFFFFF" />
     <SolidColorBrush x:Key="ButtonSelectedBackground" Color="#F2F2F2" />
     <SolidColorBrush x:Key="PageBackground" Color="#FFFFFF" />
+    <SolidColorBrush x:Key="ListBoxMouseBackground" Color="#F5F5F5" />
+    <SolidColorBrush x:Key="ListBoxSelectedBackground" Color="#F4F4F4" />
 </ResourceDictionary>
