--- a/WenElevating.Resources/ThemeColors/LightColors.xaml
+++ b/WenElevating.Resources/ThemeColors/LightColors.xaml
@@ -9,4 +9,5 @@
     <SolidColorBrush x:Key="PageBackground" Color="#FFFFFF" />
     <SolidColorBrush x:Key="ListBoxMouseBackground" Color="#F5F5F5" />
     <SolidColorBrush x:Key="ListBoxSelectedBackground" Color="#F4F4F4" />
+    <SolidColorBrush x:Key="TaskPageSpiltBursh" Color="#F3F3F3" />
 </ResourceDictionary>
