--- a/WenElevating.Todo/MainWindow.xaml
+++ b/WenElevating.Todo/MainWindow.xaml
@@ -10,6 +10,7 @@
     Title="MainWindow"
     Width="1340"
     Height="900"
+    MinHeight="400"
     d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
     FontFamily="{DynamicResource Font_HongMeng}"
     Style="{StaticResource Todo_CommonWindowStyle}"
@@ -32,7 +33,7 @@
             BorderThickness="0,0,1,0">
             <Grid Name="TestGrid" Margin="0,24,0,20">
                 <Grid.RowDefinitions>
-                    <RowDefinition />
+                    <RowDefinition MinHeight="290" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
